# nucleo-debian

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  configure  configure.ac  nucleo-config.in  nucleo.pc.in
apps/: Makefile.am  Makefile.in  videoClient.cxx
apps/videoServer/: FileStreamer.H  FileStreamer.cxx  Makefile.am  Makefile.in  Notifier.H  Notifier.cxx  Streamer.H  VideoServer.H  VideoServer.cxx  VideoService.H  VideoService.cxx  VideoStreamer.H  VideoStreamer.cxx  main.cxx
build-utils/: Makefile.am  Makefile.in  bootstrap
build-utils/rpm/: Makefile.am  Makefile.in  nucleo.spec  nucleo.spec.in
data/vera/: Makefile.am  Makefile.in
demos/: Makefile.am  Makefile.in
demos/misc/: Makefile.am  Makefile.in  disBonjour.cxx  documentOpener.cxx  multitexture.cxx  paz.cxx
demos/opencv/: Makefile.am  Makefile.in  chessboardFinder.cxx  morphodemo.cxx
demos/opencv/faceFinder/: HaarClassifier.H  HaarClassifier.cxx  Makefile.am  Makefile.in  faceFinder.cxx
demos/opencv/opticalFlow/: AutoFlow.H  AutoFlow.cxx  GridFlow.H  GridFlow.cxx  Makefile.am  Makefile.in  OpticalFlow.H  OpticalFlow.cxx  OpticalFlowViewer.H  OpticalFlowViewer.cxx  flow.cxx  miniflow.cxx
demos/video/: Makefile.am  Makefile.in  blender.cxx  collage.cxx  files2dst.cxx  mini-mirrorSpace.cxx  mini-videoProbe.cxx  multiplex.cxx  simplegl.cxx  src2files.cxx  timeoverlay.cxx
demos/vnc/: Makefile.am  Makefile.in  vnc-relay.cxx
docs/: Makefile.am  Makefile.in
docs/MacOSX/: Info.plist.tmpl  Makefile.am  Makefile.in  nBundle.in  nTest.in  nucleo.icns
nucleo/: Makefile.am  Makefile.in  config.H.in  nucleo.H  nucleo.H.in  nucleo.cxx
nucleo/core/: FileKeeper.H  FileKeeper.cxx  Makefile.am  Makefile.in  PluginManager.H  PluginManager.cxx  ReactiveEngine.H  ReactiveEngine.cxx  ReactiveObject.H  ReactiveObject.cxx  TimeKeeper.H  TimeKeeper.cxx  TimeStamp.H  TimeStamp.cxx  URI.H  URI.cxx  UUID.H  UUID.cxx
nucleo/core/carbon/: Makefile.am  Makefile.in  cReactiveEngine.H  cReactiveEngine.cxx
nucleo/core/cocoa/: Makefile.am  Makefile.in  cPoolTrick.H  cPoolTrick.m
nucleo/core/corefoundation/: Makefile.am  Makefile.in  cfFileKeeper.H  cfFileKeeper.cxx  cfReactiveEngine.H  cfReactiveEngine.cxx  cfTimeKeeper.H  cfTimeKeeper.cxx
nucleo/core/select/: Makefile.am  Makefile.in  sFileKeeper.H  sFileKeeper.cxx  sReactiveEngine.H  sReactiveEngine.cxx  sTimeKeeper.H  sTimeKeeper.cxx
nucleo/gl/: Makefile.am  Makefile.in  glIncludes.H  glIncludes.H.in  glUtils.H  glUtils.cxx
nucleo/gl/scenegraph/: Makefile.am  Makefile.in  sgClipper.H  sgNode.H  sgNode.cxx  sgViewpoint.H  sgViewpoint.cxx
nucleo/gl/shading/: Makefile.am  Makefile.in  glShader.H  glShader.cxx
nucleo/gl/text/: Makefile.am  Makefile.in  glFont.H  glFont.cxx  glFontManager.H  glFontManager.cxx  glString.H  glString.cxx
nucleo/gl/texture/: Makefile.am  Makefile.in  glTexture.H  glTexture.cxx  glTextureTile.H  glTextureTile.cxx
nucleo/gl/window/: Makefile.am  Makefile.in  _events.H  _extEvents.H  _macos2keysym.H  glWindow.H  glWindow.cxx  glWindow_AGL.H  glWindow_AGL.cxx  glWindow_GLX.H  glWindow_GLX.cxx  keysym.H  keysym.H.in
nucleo/helpers/: AppleIRController.H  AppleIRController.cxx  Makefile.am  Makefile.in  OpenCV.H  Phone.H  Phone.cxx
nucleo/image/: Image.H  Image.cxx  ImageBridge.H  Makefile.am  Makefile.in  RegionOfInterest.H
nucleo/image/encoding/: Conversion.H  Conversion.cxx  CoreGraphics.H  CoreGraphics.cxx  JPEG.H  JPEG.cxx  Makefile.am  Makefile.in  PAM.H  PAM.cxx  PNGenc.H  PNGenc.cxx  RGBAL.H  YpCbCr420.H  YpCbCr420.cxx
nucleo/image/processing/: ImageFilter.H  ImageFilter.cxx  Makefile.am  Makefile.in
nucleo/image/sink/: ImageSink.H  ImageSink.cxx  Makefile.am  Makefile.in  blackholeImageSink.H  bufferedImageSink.H  bufferedImageSink.cxx  glwindowImageSink.H  glwindowImageSink.cxx  imagefileImageSink.H  novImageSink.H  novImageSink.cxx  nserverImageSink.H  nudpImageSink.H  nudpImageSink.cxx  nudppImageSink.H  nudppImageSink.cxx  qtMovImageSink.H  qtMovImageSink.cxx  serverpushImageSink.H  serverpushImageSink.cxx
nucleo/image/source/: ImageSource.H  ImageSource.cxx  Makefile.am  Makefile.in  imagefileImageSource.H  noiseImageSource.H  noiseImageSource.cxx  novImageSource.H  novImageSource.cxx  nucImageSource.H  nucImageSource.cxx  nudpImageSource.H  nudpImageSource.cxx  nudpcImageSource.H  nudpcImageSource.cxx  nudppImageSource.H  nudppImageSource.cxx  qtMovImageSource.H  qtMovImageSource.cxx  qtSgImageSource.H  qtSgImageSource.cxx  serverpushImageSource.H  serverpushImageSource.cxx  v4lImageSource.H  v4lImageSource.cxx  vssImageSource.H  vssImageSource.cxx
nucleo/network/: Makefile.am  Makefile.in  NetworkUtils.H  NetworkUtils.cxx
nucleo/network/dnssd/: DNSService.H  DNSServiceAnnouncer.H  DNSServiceAnnouncer.cxx  DNSServiceBrowser.H  DNSServiceBrowser.cxx  Makefile.am  Makefile.in
nucleo/network/http/: HttpMessage.H  HttpMessage.cxx  Makefile.am  Makefile.in  ServerPush.H  ServerPush.cxx
nucleo/network/tcp/: BufferedTcpConnection.H  Makefile.am  (+9 more)
nucleo/plugins/: Makefile.am  Makefile.in
nucleo/utils/: AppUtils.H  AppUtils.cxx  Base64.H  Base64.cxx  ByteOrder.H  ByteOrder.cxx  ConfigDict.H  ConfigDict.cxx  FileUtils.H  FileUtils.cxx  MD5.H  MD5.cxx  Makefile.am  Makefile.in  SignalUtils.H  SignalUtils.cxx  StringUtils.H  StringUtils.cxx  TimeUtils.H  TimeUtils.cxx
nucleo/xml/: Makefile.am  Makefile.in  XmlParser.H  XmlParser.cxx  XmlStructure.H  XmlStructure.cxx  XmlText.H  XmlText.cxx
tests/: Makefile.am  Makefile.in  test-AppleIRController.cxx  test-Base64.cxx  test-ByteOrder.cxx  test-FileKeeper.cxx  test-HttpMessage.cxx  test-MD5.cxx  test-MemAlloc.cxx  test-Phone.cxx  test-Ping.cxx  test-ReactiveEngine.cxx  test-SocketKeeper.cxx  test-StringUtils.cxx  test-TimeKeeper.cxx  test-TimeStamp.cxx  test-URI-coding.cxx  test-URI.cxx  test-UUID.cxx  test-UdpSocket.cxx  test-XmlParser.cxx  test-XmppConnection.cxx  test-glString.cxx  test-glTexture.cxx  test-glWindow.cxx  test-httpServer.cxx  test-plugins.cxx  test-rdv.cxx  test-reducePath.cxx  test-sgNode.cxx  test-speed.cxx  test-udpplus.cxx
(+97 files in other folders)
