## -*- Makefile -*- mode
## Process this file with automake to create Makefile.in
#
# nucleo/build-utils/Makefile.am --
#
# Copyright (C) Olivier Chapuis
#
# See the file LICENSE for information on usage and redistribution of
# this file, and for a DISCLAIMER OF ALL WARRANTIES.
#

SUBDIRS = rpm

EXTRA_DIST = bootstrap
