## -*- Makefile -*- mode
## Process this file with automake to create Makefile.in
#
# demos/Makefile.am --
#
# Copyright (C) Nicolas Roussel, Olivier Chapuis
#
# See the file LICENSE for information on usage and redistribution of
# this file, and for a DISCLAIMER OF ALL WARRANTIES.
#

SUBDIRS = video misc

if HAVE_VNC
SUBDIRS += vnc
endif

if HAVE_OPENCV
SUBDIRS += opencv
endif
