## -*- Makefile -*- mode
## Process this file with automake to create Makefile.in
#
# docs/Makefile.am --
#
# Copyright (C) Olivier Chapuis, Nicolas Roussel
#
# See the file LICENSE for information on usage and redistribution of
# this file, and for a DISCLAIMER OF ALL WARRANTIES.
#

SUBDIRS = MacOSX

#EXTRA_DIST = todo.html