## -*- Makefile -*- mode
## Process this file with automake to create Makefile.in
#
# data/vera/Makefile.am --
#
# Copyright (C) Nicolas Roussel
#
# See the file LICENSE for information on usage and redistribution of
# this file, and for a DISCLAIMER OF ALL WARRANTIES.
#

configdir = @NUCLEO_RESOURCES_DIR@/fonts

config_DATA = Vera.ttf VeraIt.ttf VeraBd.ttf VeraBI.ttf \
              VeraMono.ttf VeraMoBd.ttf VeraMoIt.ttf VeraMoBI.ttf \
              VeraSe.ttf VeraSeBd.ttf

EXTRA_DIST = $(config_DATA) COPYRIGHT.TXT README.TXT local.conf RELEASENOTES.TXT 
