## -*- Makefile -*- mode
## Process this file with automake to create Makefile.in
#
# docs/MacOSX/Makefile.am --
#
# Copyright (C) Olivier Chapuis, Nicolas Roussel
#
# See the file LICENSE for information on usage and redistribution of
# this file, and for a DISCLAIMER OF ALL WARRANTIES.
#

EXTRA_DIST = Info.plist.tmpl nucleo.icns nucleo.pdf nTest.in nBundle.in

bin_SCRIPTS = nTest nBundle

nTestdir = $(datadir)/nucleo
nTest_DATA = Info.plist.tmpl nucleo.icns nucleo.pdf
