## -*- Makefile -*- mode
## Process this file with automake to create Makefile.in
#
# nucleo/core/corefoundation/Makefile.am --
#
# Copyright (C) Nicolas Roussel, Olivier Chapuis
#
# See the file LICENSE for information on usage and redistribution of
# this file, and for a DISCLAIMER OF ALL WARRANTIES.
#

AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}

noinst_LTLIBRARIES = libcorefoundation.la

libcorefoundation_la_SOURCES = cfTimeKeeper.cxx cfFileKeeper.cxx cfReactiveEngine.cxx cfReactiveEngine.H cfTimeKeeper.H cfFileKeeper.H
