## -*- Makefile -*- mode
## Process this file with automake to create Makefile.in
#
# nucleo/core/select/Makefile.am --
#
# Copyright (C) Nicolas Roussel, Olivier Chapuis
#
# See the file LICENSE for information on usage and redistribution of
# this file, and for a DISCLAIMER OF ALL WARRANTIES.
#

AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}

noinst_LTLIBRARIES = libselect.la

libselect_la_SOURCES = sTimeKeeper.cxx sFileKeeper.cxx sReactiveEngine.cxx \
	sTimeKeeper.H sReactiveEngine.H sFileKeeper.H
